<resources>
    <string name="app_name">MyTinder_1</string>

    <string name="uname">Username:</string>
    <string name="fname">Full Name:</string>
    <string name="pwd">Password:</string>
    <string name="cpwd">Confirm password:</string>
    <string name="mail">Mail:</string>
    <string name="age">Age:</string>

    <string name="gender_label">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="gender_nope">I don\'t want to say</string>

    <string name="noAccount">No account? Press here to register</string>
</resources>